<resources>
    <string name="app_name">Aplikacja</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Wspólne -->
    <string name="common_confirm">Potwierdź</string>
    <string name="common_add">Dodaj</string>
    <string name="common_save">Zapisz</string>
    <string name="common_selectType">Wybierz rodzaj</string>
    <string name="common_selectBrand">Wybierz markę</string>
    <string name="common_selectModel">Wybierz model</string>
    <string name="common_selectCar">Wybierz auto</string>
    <string name="common_selectExpenceType">Wybierz koszt</string>
    <string name="common_car">Samochód</string>
    <string name="common_motorcycle">Motocykl</string>
    <string name="common_truck">Ciężarówka</string>
    <string name="common_coach">Autokar</string>
    common_save

    <!-- Errory -->
    <string name="warning_passwordsAreNotIdentical">Podane hasła nie są identyczne.</string>
    <string name="warning_nameTooShort">Podaj dłuższe imię.</string>
    <string name="warning_nameIsRequired">Imię jest wymagane.</string>
    <string name="warning_passwordTooShort">Hasło jest za krótkie.</string>
    <string name="warning_passwordIsRequired">Hasło jest wymagane.</string>

    <!-- Pierwszy widok -->
    <string name="firstScreen_step1of2">Krok 1/2</string>
    <string name="firstScreen_whatsYourName">Cześć! Jak się nazywasz?</string>
    <string name="firstScreen_namePlaceholder">Podaj swoje imię...</string>
    <string name="firstScreen_setYourPassword">Ustaw swoje hasło</string>
    <string name="firstScreen_passwordPlaceholder">Wpisz hasło...</string>
    <string name="firstScreen_repeatPasswordPlaceholder">Potwierdź hasło...</string>

    <!-- Drugi widok -->
    <string name="secondScreen_step2of2">Krok 2/2</string>
    <string name="secondScreen_addFirstVehicleTitle">Uzupełnij pierwszy pojazd</string>
    <string name="secondScreen_addLicensePlate">Wpisz rejestrację pojazdu</string>
    <string name="secondScreen_addMeterStatus">Wpisz stan licznika przebiegu</string>
    <string name="secondScreen_addPhoto">Dodaj zdjęcie</string>

    <!-- Ekran główny -->
    <string name="mainScreen_title">Ekran główny</string>
    <string name="mainScreen_refuelingTitle">Tankowanie</string>
    <string name="mainScreen_avgConsumptionLabel">średnie spalanie</string>
    <string name="mainScreen_lastConsumptionLabel">ostatnie spalanie</string>
    <string name="mainScreen_avgPriceLabel">średnia cena paliwa</string>
    <string name="mainScreen_lastPriceLabel">ostatnia cena paliwa</string>

    <string name="mainScreen_nextMonthTitle">Nadchodzący miesiąc</string>
    <string name="mainScreen_insuranceLabel">Ubezpieczenie</string>
    <string name="mainScreen_serviceLabel">Serwis</string>
    <string name="menuDescription">Menu</string>
    <string name="logoDescription">Logo</string>

    <!-- Dodaj pojazd -->
    <string name="addcarScreen_addVehicleTitle">Dodaj swój pojazd</string>
    <string name="addcarScreen_addLicensePlate">Wpisz rejestrację pojazdu</string>
    <string name="addcarScreen_addMeterStatus">Wpisz stan licznika przebiegu</string>
    <string name="addcarScreen_addPhoto">Dodaj zdjęcie</string>

    <!-- Edytuj pojazd -->
    <string name="editcarScreen_addVehicleTitle">Edytuj pojazd</string>
    <string name="editcarScreen_addPhoto">Edytuj zdjęcie</string>

    <!-- Dodaj koszt -->
    <string name="addexpenceScreen_addExpence">Dodaj koszt</string>
    <string name="addexpenceScreen_addAmount">Podaj ilość</string>
    <string name="addexpenceScreen_addValue">Podaj cene</string>
    <string name="addexpenceScreen_addAdditionalInformation">Informacje dodatkowe</string>

</resources>