<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@color/main">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/logoDescription" />

    <TextView
        android:id="@+id/addFirstCarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/secondScreen_addFirstVehicleTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <Spinner
        android:id="@+id/selectTypeSpinner"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#642CFD"
        android:backgroundTint="@color/white"
        android:contextClickable="true"
        android:foregroundTint="#00000000"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFirstCarTitle"
        tools:listitem="@android:layout/select_dialog_item" />

    <Spinner
        android:id="@+id/selectBrandSpinner"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#642CFD"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTypeSpinner"
        tools:listitem="@android:layout/select_dialog_item" />

    <Spinner
        android:id="@+id/selectModelSpinner"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#642CFD"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectBrandSpinner"
        tools:listitem="@android:layout/select_dialog_item" />

    <EditText
        android:id="@+id/addLicensePlateInput"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/secondScreen_addLicensePlate"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectModelSpinner"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/addMeterStatusInput"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/secondScreen_addMeterStatus"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLicensePlateInput"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/secondScreen_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/warning"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:width="310dp"
        android:backgroundTint="@color/white"
        android:text="@string/common_add"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/secondScreen_warning" />

</androidx.constraintlayout.widget.ConstraintLayout>